feat(main): add files lab-1

--- a/labs/lab01/report/ЛО1_Михальский_отчет.md
+++ b/labs/lab01/report/ЛО1_Михальский_отчет.md
@@ -89,62 +89,62 @@ header-includes:
 # Выполнение лабораторной работы
 
 Открыл терминал используя графическую оболочку. По умолчаниию терминал открывается в домашнем каталоге. Узнал путь командой pwd.
-![Проверка путя](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO11.png)
+![Проверка путя](image/LO11.png)
 Перешел в каталог Documents.
-![Переход](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO12.png)
+![Переход](image/LO12.png)
 Перешел в каталог /usr/local и проверил его содержимое командой ls
-![Переход](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO13.png)
+![Переход](image/LO13.png)
 Перешел в домашний каталог и вывел его содержимое, в графическом интерфейсе убедился в совпадении файлов.
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO14.png)
+![Проверка](image/LO14.png)
 Примеры использования команды ls с разными ключами:
-![Примеры](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO15.png)
+![Примеры](image/LO15.png)
 Создал в домашнем каталоге подкаталог parentdir и проверил, что он создан.
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO16.png)
+![Проверка](image/LO16.png)
 Создал подкаталоги dir, dir1, dir2, dir3 в подкаталоге parentdir.
-![Создание каталога](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO17.png)
+![Создание каталога](image/LO17.png)
 
 Создал подкаталог newdir в домашнем каталоге. 
-![Создание каталога](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO18.png)
+![Создание каталога](image/LO18.png)
 Создал цепочку каталогов в каталоге newdir. 
-![Создание каталогов](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO19.png)
+![Создание каталогов](image/LO19.png)
 Создал файл test.txt в каталоге newdir/newdir1/newdir2/newdir3 и проверил его налиие.
-![Создание файлов](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO110.png)
+![Создание файлов](image/LO110.png)
 Удалил все файлы, заканчивающиеся на .txt, в каталоге newdir/newdir1/newdir2/newdir3
-![Удаление файлов](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO111.png)
+![Удаление файлов](image/LO111.png)
 Удалил цепочку каталогов в parentdir, а также каталог newdir без запроса подтверждения.	
-![Удаление директорий](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO112.png)
+![Удаление директорий](image/LO112.png)
 Создал файлы и каталоги:
-![Создание](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO113.png)
+![Создание](image/LO113.png)
 Переместил файл test2.txt в каталог parentdir3, скопировал файл test.txt
-![Перемещение файлов](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO114.png)
+![Перемещение файлов](image/LO114.png)
 Проверил правильность выполненных комманд:
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO115.png)
+![Проверка](image/LO115.png)
 Переименовал файл test.txt в newtest.txt.
-![Переименование](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO116.png)
+![Переименование](image/LO116.png)
 Переименовал каталог dir1 в newdir.
-![Переименование](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO117.png)
+![Переименование](image/LO117.png)
 
 #Выполнение заданий для самостоятельной работы
 
     1.  Полный путь к домашнему каталогу.
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO118.png)
+![Проверка](image/LO118.png)
     2.  Последовательность комманд создает директорию tmp в домашнем каталоге и показывается путь к свежесозданному каталогу.
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO119.png)
+![Проверка](image/LO119.png)
     3. Содержимое корневого, домашнего, /etc, /usr/local каталогов.
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO120.png)
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO121.png)
+![Проверка](image/LO120.png)
+![Проверка](image/LO121.png)
     4. Создание каталога temp и подкаталогов lab1, lab2, lab3 в каталоге labs.
 Создание файлов text1.txt, text2.txt, text3.txt в каталоге temp коммандой touch с последущей проверкой правильности выполнения действий.
-![Создание каталогов](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO122.png)
-![Создание каталогов](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO123.png)
+![Создание каталогов](image/LO122.png)
+![Создание каталогов](image/LO123.png)
     5. После редактирования файлов в графическом редакторе, проверка содержимого текстовых файлов .txt командой cat.
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO124.png)
-![Проверка](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO125.png)
+![Проверка](image/LO124.png)
+![Проверка](image/LO125.png)
     1.  Копирование всех файлов .txt из каталога /temp в каталог /labs командой cp и проверка правильности вылненных действий.
  Переименование и перемещение файлов text1.txt как firstname.txt в подкаталог lab1, text1.txt как lastname.txt в подкаталог lab2, text1.txt как id-group.txt в подкаталог lab3 командой mv и проверка информации в файлах и правильности вылненных дейстий.
-![Копирование файлов](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO126.png)
+![Копирование файлов](image/LO126.png)
     2.  Удаление главных каталогов, что подразумевает удаление всех файлов и подкаталогов в них, без запроса подтверждения.
-![Удаление каталогов](/home/KAMihalsky/work/study/2024-2025/Архитектура Компьютера/arch-pc/labs/lab01/report/image/LO127.png)
+![Удаление каталогов](image/LO127.png)
 
 # Выводы
 
